# Sentinance

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  pr-checks.yml
apps/api/: .dockerignore  Dockerfile  ab_testing.py  agent.py  ai_chat.py  alembic.ini  alerts_service.py  analysis_results.txt  anomaly_alerts.py  anomaly_detection.py  auth.py  backtest.py  cache.py  database.py  db_models.py  deep_analysis.py  dependencies.py  download_data.py  download_global_data.py  enhanced_ai.py  exchange_connector.py  full_test_results.txt  gemini_client.py  indicators.py  kafka_consumer.py  kafka_producer.py  llm_wrapper.py  main.py  main_imports.py  market_stats.py  metrics.py  model_router.py  multi_exchange.py  news_scraper.py  observability.py  predictor.py  pytest.ini  rag_service.py  repositories.py  requirements-railway.txt  (+16 more)
apps/data_quality/: expectations.py
apps/dbt/: dbt_project.yml
apps/feature_store/: feature_store.py
apps/ml/: README.md  drift_detection.py  explainability.py  gnn_model.py  lstm_model.py  mlflow_config.py  train_lstm.py
apps/orchestration/: prefect.yaml
apps/rust-aggregator/: Cargo.toml
apps/rust-aggregator/src/: main.rs
apps/spark/: spark_features.py
apps/web/: .env.production.example  Dockerfile  package-lock.json  (+5 more)
docs/: API.md  DEPLOYMENT.md  PORTFOLIO_CLAIMS.md  SETUP.md  SPECIFICATION.md  TECH_STACK.md  VERCEL_DEPLOYMENT.md  WORKFLOW_MAP.md  data_lineage.md
infra/: docker-compose.yml
notebooks/: 01_price_eda.ipynb
(+98 files in other folders)
