[package]
name = "sentinance-aggregator"
version = "0.1.0"
edition = "2021"
authors = ["Sentinance Team"]
description = "High-performance crypto price aggregator"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "aggregator"
path = "src/main.rs"
